# pc-ble-driver

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Installation.md  Issues.md  LICENSE  README.md  azure-pipelines.yml  license.txt
.azure-pipelines/: azure-pipelines.yml  nordic_setup.py  requirements.txt  run-test.cmake  toolchains.json
.github/: ISSUE_TEMPLATE.md
cmake/: apple.cmake  clang-dev-tools.cmake  clang-format.cmake  clang.cmake  gcc.cmake  install-target.cmake  msvc.cmake  nrf-apply-patches.cmake  nrf-ble-driver.cmake  nrf-ble-driverConfig.cmake.in  nrf-download-distfile.cmake  pc-ble-driver.cmake  softdevice-file-list.cmake  source-file-list.cmake
driver/: CMakeLists.txt  version.rc.in
driver/examples/: Makefile.common  stdbool.h
driver/examples/advertising/: main.c
driver/examples/advertising/msvc/: advertising.vcxproj
driver/examples/heart_rate_collector/: main.c
driver/examples/heart_rate_collector/msvc/: heart_rate_collector.vcxproj
driver/examples/heart_rate_monitor/: main.c
driver/examples/heart_rate_monitor/gcc/: Makefile
driver/examples/heart_rate_monitor/msvc/: heart_rate_monitor.vcxproj
driver/examples/heart_rate_relay/: main.c
driver/examples/heart_rate_relay/gcc/: Makefile
driver/examples/heart_rate_relay/msvc/: heart_rate_relay.vcxproj
driver/examples/multi_link/: main.c
driver/examples/multi_link/msvc/: multi_link.vcxproj
driver/inc/: app_log.h  app_log_utility.h  app_timer_extension.h  app_uart_extension.h  sd_rpc.h  ser_app_hal_pc_extension.h  ser_phy_config_app_nrf51.h  ser_softdevice_handler_extension.h  softdevice_handler_extension.h  timer.h  timer_boost.h  uart.h  uart_boost.h  uart_defines.h  uart_settings.h  uart_settings_boost.h
driver/inc_override/: app_util_platform.h  nrf_sdm.h  nrf_soc.h  nrf_svc.h
driver/src/: app_log.c  app_log_utility.c  app_timer_pc.c  app_uart_pc.c  nrf_soc_pc.c  sd_rpc.c  ser_app_hal_pc.c  ser_app_power_system_off_pc.c  timer.cpp  timer_boost.cpp  uart.cpp  uart_boost.cpp  uart_settings.cpp  uart_settings_boost.cpp
driver/tests/: CMakeLists.txt  requirements.txt  setup.py
driver/tests/app_log_test/: tst_app_log.cpp
driver/tests/app_timer_test/: tst_app_timer.cpp
driver/tests/app_uart_test/: main.cpp  tst_app_uart.cpp  tst_app_uart.h
driver/tests/bdd/: environment.py  heart_rate_examples.feature  heart_rate_relay_examples.feature  multi_link_examples.feature
driver/tests/bdd/steps/: common_steps.py  util.py
driver/tests/common/: app_log.c
driver/tests/config/linux/: 50-segger.rules  51-segger_tty.rules
driver/tests/mock/: timer_boost.cpp  timer_boost.h  uart_boost.cpp  uart_boost.h  uart_test.cpp  uart_test.h
driver/tests/resources/: blinky_nrf51422_xxac.hex
driver/tests/timer_cpp_test/: tst_timer_boost.cpp
driver/tests/uart_cpp_test/: tst_uart_boost.cpp  tst_uart_settings.cpp
driver/tests/zip_content/: test_zip_content.py
examples/: CMakeLists.txt  README.md
examples/ble_app_ipsp_initiator/: main.c
examples/heart_rate_collector/: CMakeLists.txt  main.c
examples/heart_rate_monitor/: CMakeLists.txt  main.c
examples/heart_rate_monitor_v2/: CMakeLists.txt  main.c
examples/heart_rate_monitor_v3/: CMakeLists.txt  main.c
examples/nordic_uart_client/: main.c
examples/port_enumeration/: main.c
hex/: .gitignore  CMakeLists.txt  README.md  SD20.patch  SD20_SDK11.patch  bootstrap.sh  build_win.bat  connectivity_1.0.1_115k2_with_s130_2.0.1.hex  connectivity_115k2_with_s130_2.0.1.hex  connectivity_115k2_with_s132_2.0.1.hex  nRF5_SDK_11.0.0_connectivity.patch  nRF5_SDK_15.2.0_connectivity.patch  sdk110_connectivity.patch  (+2 more)
python/: CMakeLists.txt
python/examples/advertising/: main.py
python/examples/heart_rate_collector/: main.py
python/examples/heart_rate_monitor/: main.py
python/examples/heart_rate_relay/: main.py
python/examples/multi_link/: main.py
python/src/: ble_driver_util.py
python/swig/: ble_driver_py.i
test/: CMakeLists.txt  README.md  test_h5_transport.cpp  test_issue_gh_112.cpp  test_pc_ble_driver_open_close.cpp  test_setup.h  test_uart.cpp  test_uart_boost.cpp  test_util.h  test_util_adapter_wrapper.h  test_util_adapter_wrapper_scratchpad.h  test_util_conversion.h  test_util_role.h  test_virtual_uart.cpp  virtual_uart.h
test/auth _legacy_oob_central/: main.c
test/auth _legacy_oob_peripheral/: main.c
test/include/: test_setup.h  test_util.h  test_util_adapter_wrapper.h  test_util_adapter_wrapper_scratchpad.h  test_util_conversion.h
test/security_central/: main.c
test/security_legacy_oob_central/: main.c
test/security_legacy_oob_peripheral/: main.c
test/security_legacy_pairing_central/: main.c
test/security_legacy_pairing_peripheral/: main.c
test/security_legacy_passkey_central/: main.c
test/security_legacy_passkey_peripheral/: main.c
test/security_oob_central/: CMakeLists.txt  main.c
test/security_oob_peripheral/: main.c
test/security_passkey_central/: main.c
test/security_passkey_peripheral/: main.c
test/security_peripheral/: main.c
test/security_request_central/: main.c
test/security_request_peripheral/: CMakeLists.txt  main.c
test/softdevice_api/: test.cpp  test_advertising_api.cpp  test_issue_gh_112.cpp  test_issue_stuck_in_scan_mode.cpp  test_main.cpp  test_pc_ble_driver_open_close.cpp  test_phy_update.cpp  test_security.cpp  testcase_advertising.cpp  testcase_driver_open_close.cpp  testcase_issue_128bit_uuid.cpp  testcase_issue_gh_112.cpp  testcase_issue_stuck_in_scan_mode.cpp  testcase_phy_update.cpp  testcase_rssi.cpp  testcase_security.cpp  testcase_util.cpp
test/transport/: test_h5_transport.cpp  test_serial_port_enum.cpp  test_uart_boost.cpp  test_uart_transport.cpp  test_virtual_uart.cpp
test/util/include/: logging.h  test_environment.h  test_setup.h  test_util.h  test_util_adapter_wrapper.h  test_util_adapter_wrapper_scratchpad.h  test_util_conversion.h  test_util_role.h  virtual_uart.h
test/util/src/: logging.cpp  test_environment.cpp  test_setup.cpp  test_util.cpp  test_util_adapter_wrapper.cpp  test_util_conversion.cpp  test_util_role.cpp  virtual_uart.cpp
(+618 files in other folders)
